# saucedemo-playwright-tests

./: .env.example  .gitignore  README.md  __init__.py  config.py  conftest.py  pyproject.toml  requirements.txt  run_tests.py  verify_setup.py
.github/workflows/: saucedemo_tests.yml
locators/: __init__.py  saucedemo_locators.py
pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py  products_page.py
reports/: test_report.html
tests/: test_saucedemo.py
utils/: __init__.py  driver_factory.py  logger.py  page_utils.py  test_data.py
